<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediastock">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="blackTheme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreements">Пользовательское соглашение</string>
    <string name="noMail">Почтовый клиент не установлен по умолчанию</string>
    <string name="eMail">luckycampshop@gmail.com</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="browsError">Нет браузера по умолчанию.</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="http" translatable="false">https://practicum.yandex.com/android-developer/</string>
    <string name="tp" translatable="false">text/plain</string>
    <string name="appShareText">Поделиться приложением через:</string>
    <string name="music_track_name" translatable="false">Track name</string>
     <string name="music_group_name" translatable="false">Group name</string>
     <string name="music_track_duration" translatable="false">00:00</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="error_connection">Проблемы со связью</string>
    <string name="error_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
</resources>