<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainSettings"
    style="@style/SettingsPage"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/back"
        >
        <Button
            style="@style/SettingsArrowBackButton"
            app:icon="@drawable/arrow"
            />
        <TextView
            android:text="@string/settings"
            android:id="@+id/backButton"
            style="@style/SettingsPageBackButton"

            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight">

        <TextView
            android:text="@string/blackTheme"
            style="@style/SettingsActivityStringText"
            />

        <ImageView
            style="@style/Switcher"

            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight">

        <TextView
            android:text="@string/share"
            android:id="@+id/text_share"
            style="@style/SettingsActivityStringText"
            />

        <ImageView
            android:id="@+id/share"
            style="@style/SettingsScreenIconSettings"
            android:src="@drawable/lm_share" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight">

        <TextView
            android:text="@string/support"
            style="@style/SettingsActivityStringText"
            />

        <ImageView
            android:id="@+id/support"
            style="@style/SettingsScreenIconSettings"
            android:src="@drawable/lm_support" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight">

        <TextView
            android:text="@string/agreements"
            style="@style/SettingsActivityStringText"
            />

        <ImageView
            android:id="@+id/agreements"
            style="@style/SettingsScreenIconSettings"
            android:src="@drawable/lm_arrow" />
    </RelativeLayout>

</LinearLayout>